--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,13 @@ body{
 a{
     text-decoration: none;
 }
+.section-title{
+    color: #562EFF;
+    font-size: 24px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+}
 /* -----------------------------------
             header-area style
 ----------------------------------- */
@@ -59,4 +66,38 @@ nav ul li{
 nav ul li a{
     font-size: 16px;
     color: #fff;
+}
+
+/*--------------------------------- 
+        top player area style
+---------------------------------*/
+main{
+    display: flex;
+    justify-content: center;
+    margin: 35px 0;
+}
+main .container{
+    background: #FFFFFF;
+    border-radius: 5px;
+    padding: 13px 30px 30px;
+
+}
+.players{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 29px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+.player{
+    display: flex;
+    align-items: center;
+}
+.player img{
+    width: 56px;
+    height: 56px;
+}
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
 }
