--- a/style/style.css
+++ b/style/style.css
@@ -73,7 +73,8 @@ nav ul li a{
 ---------------------------------*/
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 35px 0;
 }
 main .container{
@@ -100,4 +101,140 @@ main .container{
 .player-name{
     margin-left: 16px;
     font-size: 18px;
+}
+
+
+
+/* =======================
+        top blog style
+============================ */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 45px;
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+    align-items: center;
+}
+
+.thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+.blog-details{
+    margin-left: 15px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    color: #562EFF;
+}
+
+
+/* ----------------------------------
+        lates course style
+------------------------------------------*/
+
+.late-area{
+    margin-top: 21px;
+}
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 35px;
+}
+.course-thumb img{
+    width: 266px;
+    height: 141px;
+}
+.course-title{
+    font-size: 20px;
+}
+.course-author{
+    color: #ED6B4F;
+    font-size: 15px;
+}
+.course-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.fa-star{
+    font-size: 12px;
+}
+.filled{
+    color: #FFC014;
+}
+.emtry{
+    color: #A2A2A2    ;
+}
+.time-duration{
+    color: #ED6B4F    ;
+    background: #FEE5DF;
+    border-radius: 14.6913px;
+    padding: 5px;
+}
+
+/* ----------------------------------------------------
+        Media Queries responsive
+------------------------------------------------------- */
+/* mobile device view */
+@media only screen and (max-width:688px){
+    .container{
+        width: 100%;
+        /* background: red; */
+    }
+    .idea-menu-area{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        padding: 25px;
+    }
+    .section-title{
+        padding: 25px;
+    }
+    .players , .blogs , .courses {
+        grid-template-columns: repeat(1 , 1fr);
+        padding: 25px;
+    }
+    .player{
+        flex-direction: column;
+    }
+}
+
+/* tablet view */
+
+@media only screen and (min-width:688px) and (max-width:992px){
+    .container{
+        width: 100%;
+        /* background: red; */
+    }
+    .idea-menu-area{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        padding: 25px;
+    }
+    .section-title{
+        padding: 25px;
+    }
+    .players , .courses {
+        grid-template-columns: repeat(2 , 1fr);
+        padding: 25px;
+    }
+    .blogs{
+        grid-template-columns: repeat(1,1fr);
+        padding: 0 45px ;
+    }
+    .player{
+        flex-direction: column;
+    }
+    .courses{
+        grid-row-gap: 30px;
+    }
 }
