--- a/style/style.css
+++ b/style/style.css
@@ -180,6 +180,7 @@ main .container{
     background: #FEE5DF;
     border-radius: 14.6913px;
     padding: 5px;
+    font-size: 15px;
 }
 
 /* ----------------------------------------------------
